--- a/src/style.css
+++ b/src/style.css
@@ -7,8 +7,12 @@
 #wrapper2{
     background-color: bisque;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     top: 100vh;
+}
+#mountains1{
+    width: 90vh;
+    height: 50vh;
 }
 body{
     padding: 0;
