--- a/src/style.css
+++ b/src/style.css
@@ -5,14 +5,9 @@
     height: 100vh;
 }
 #wrapper2{
-    background-color: bisque;
     width: 100%;
     height: 100%;
-    top: 100vh;
-}
-#mountains1{
-    width: 90vh;
-    height: 50vh;
+    background-color:antiquewhite;
 }
 body{
     padding: 0;
@@ -46,4 +41,7 @@ body{
     place-items: center;
     position: absolute;
     width: 100%;
+}
+#window1{
+    
 }
